2010-03-23  Alan McGovern  <amcgovern@novell.com>

	* misc/DefaultValues.cs:
	* System.Windows.Media/ImageBrushTest.cs: Remove moonlightbug
	  from tests which are passing now.

2010-03-23  Alan McGovern  <amcgovern@novell.com>

	* misc/DefaultValues.cs: regen

	* System.Windows/DependencyPropertyTest.cs: Add a moonlightbug
	  attribute

2010-03-22  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Net.Browser/BrowserHttpWebRequestTest.cs: Remove the
	two [MoonlightBug] on test cases
	* System.Net.Browser/ClientHttpWebRequestTest.cs: Remove the
	three [MoonlightBug] on test cases
	* System.Net.Browser/WebRequestCreatorTest.cs: Uncomment
	assertions now that we have two actual stacks

2010-03-22  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ItemsControlTest.cs: Nuke
	  SetParentSafe as the only place where it was being used
	  shouldn't have been calling SetParent anyway.

2010-03-19  Mario Carrion  <mcarrion@novell.com>

	* System.Windows.Automation.Peers/TabItemAutomationPeerTest.cs: Tests
	fix when ItemContainerGenerator.ItemFromContainer returns
	DependencyProperty.UnsetValue.

2010-03-19  Sebastien Pouliot  <sebastien@ximian.com> 

	* System.Net.Browser/BaseHttpWebRequestTest.cs: Add test cases
	for non-http[s] protocols

2010-03-19  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Net/HttpWebRequestTest.cs: Add assert for new (SL4 RC)
	AllowWriteStreamBuffering property
	* System.Net/WebClientTest.cs: Add assert for new (SL4 RC)
	AllowWriteStreamBuffering and UseDefaultCredentials properties
	* System.Net.Browser/BaseHttpWebRequestTest.cs: Add default
	buffering assertions.
	* System.Net.Browser/BrowserHttpWebRequestTest.cs: Add assert
	for new (SL4 RC) SupportsCookieContainer property
	* System.Net.Browser/ClientHttpWebRequestTest.cs: Add assert
	for new (SL4 RC) SupportsCookieContainer property. Add
	[MoonlightBug] on HeadersGetThrowingInGetResponse

2010-03-18  Sebastien Pouliot  <sebastien@ximian.com>
